# marimo-cad

./: .gitignore  README.md  package.json  playwright.config.js  pyproject.toml
.agent/: journal.md
experiments/: cad_minimal.py  svg_anywidget.py  svg_widget.py
js/: package-lock.json  package.json  vite.config.js
js/src/: cad-group-factory.js  constants.js  index.js  live-viewer.js  part-manager.js
notebooks/: bookshelf.py  demo.py  vase.py
src/marimo_cad/: __init__.py  tessellate.py  widget.py
tests/: test_widget.py
tests/e2e/: cad-viewer.spec.js
